<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MedusaCam</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">TitleMain</string>
    <string name="action_settings">Settings</string>

    <!--UI settings-->
    <string name="photo_btn_name">Take Photo</string>
    <string name="video_btn_name">Take Video</string>
    <string name="txt_name"> Welcome! Please email to liu851@usc.edu for any problem.-----------------------------------------------------------------------------</string>
    <string name="sb_name"> Select number of cars in your photo: </string>
    <string name="radiobutton1">Indoor</string>
    <string name="radiobutton2">Outdoor</string>
    <string name="gps_location_text">GPS Location</string>
    <string name="cars_text">Number of Cars</string>
    <string name="angleOfView_text">Angle of View</string>
    <string name="lightSensor_text">Light Sensor</string>
    <string name="accValue_text">Acc Value</string>
    <string name="magValue_text">Mag Value</string>
    <string name="bearingInfo_text">Bearing Info</string>
    <string name="data_btn_name">Take Data</string>
</resources>
